name:                groundhog-utils
version:             0.1.0.0
synopsis:            Some utilities that are often useful when using Groundhog
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Database.Groundhog.Utils
    Database.Groundhog.Utils.Postgresql
  build-depends:       
      base >=4.6 && <4.7
    , lens >=3.10 && <3.11
    , groundhog >=0.4 && <0.5
    , groundhog-postgresql >=0.4 && <0.5
    , groundhog-th >=0.4 && <0.5
    , cereal >= 0.4 && < 0.5
    , safecopy >= 0.8 && < 0.9
    , data-default >= 0.5 && < 0.6
    , bytestring >= 0.10 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010