name:                groundhog-utils
version:             0.3.1
synopsis:            Some utilities that are often useful when using Groundhog
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  changelog.md

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    Database.Groundhog.Utils
    Database.Groundhog.Utils.Postgresql
  build-depends:
      aeson                >= 0.7
    , base                 >= 4.6  && < 5
    , bytestring           >= 0.10
    , cereal               >= 0.3  && < 0.6
    , data-default         >= 0.5
    , groundhog            >= 0.8
    , groundhog-postgresql >= 0.8
    , groundhog-th         >= 0.8
    , lens                 >= 3.9  && < 5
    , safecopy             >= 0.8
    , tagged
    , resourcet >= 1.1.0
    , transformers
    , monad-control
    , conduit
    , transformers
    , transformers-base
    , monad-loops
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall